gracia_nogales_s01/session-01/exercise-03/mariadb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mariadb
  namespace: exercise-03
spec:
  selector:
    matchLabels:
      app: mariadb
      tier: backend
      track: stable
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
        track: stable
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
        ports:
        - containerPort: 3306
          name: mariadb
