gracia_nogales_s01/session-01/exercise-03/svc-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: exercise-03
spec:
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
---
kind: Endpoints
apiVersion: v1
metadata:
  name: mariadb
  namespace: exercise-03
subsets:
  - addresses:
    - ip: "18.232.13.56"
    ports:
    - port: 3306
